feat: configure sendgrid

--- a/.env.test
+++ b/.env.test
@@ -1,8 +1,8 @@
-DB_HOST='localhost'
+DB_HOST=localhost
 DB_PORT=5432
-DB_USERNAME='user'
-DB_PASSWORD='password'
-DB_NAME='cycleconnect'
+DB_USERNAME=user
+DB_PASSWORD=password
+DB_NAME=cycleconnect
 
 AUTH_JWT_SECRET=secret
 AUTH_JWT_TOKEN_EXPIRES_IN=1h
@@ -13,3 +13,13 @@ AUTH_FORGOT_TOKEN_EXPIRES_IN=30m
 AUTH_CONFIRM_EMAIL_SECRET=secret_for_confirm_email
 AUTH_CONFIRM_EMAIL_TOKEN_EXPIRES_IN=1d
 COOKIES_EXPIRES_IN=10d
+
+TRANSPORTER_TYPE=sendgrid
+MAIL_HOST=https://api.sendgrid.com/v3
+MAIL_PASSWORD=password
+MAIL_USER=user
+MAIL_DEFAULT_EMAIL=user@gmail.com
+MAIL_DEFAULT_NAME=User
+MAIL_IGNORE_TLS=true
+MAIL_SECURE=true
+MAIL_REQUIRE_TLS=true
