--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "seed:up": "ts-node database/seed"
   },
   "dependencies": {
+    "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/cqrs": "^11.0.3",
