test: configure complete test setup with testcontainers and jest

--- a/.env.test
+++ b/.env.test
@@ -1,8 +1,8 @@
-DB_HOST=localhost
-DB_PORT=5432
-DB_USERNAME=user
-DB_PASSWORD=password
-DB_NAME=cycleconnect
+DB_HOST=
+DB_PORT=
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
+DB_NAME=test_db
 
 AUTH_JWT_SECRET=secret
 AUTH_JWT_TOKEN_EXPIRES_IN=1h
@@ -14,6 +14,7 @@ AUTH_CONFIRM_EMAIL_SECRET=secret_for_confirm_email
 AUTH_CONFIRM_EMAIL_TOKEN_EXPIRES_IN=1d
 COOKIES_EXPIRES_IN=10d
 
+
 TRANSPORTER_TYPE=sendgrid
 MAIL_HOST=https://api.sendgrid.com/v3
 MAIL_PASSWORD=password
@@ -23,3 +24,11 @@ MAIL_DEFAULT_NAME=User
 MAIL_IGNORE_TLS=true
 MAIL_SECURE=true
 MAIL_REQUIRE_TLS=true
+VERIFY_TEMPLATE_PATH=verify-email-template-path
+
+
+
+ACCESS_KEY_ID=access-key-id
+SECRET_ACCESS_KEY=secret-access-key
+AWS_S3_REGION=s3-region
+AWS_DEFAULT_S3_BUCKET=s3-bucket
